--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                                     <li><a class="dropdown-item" href="socialmedia.html">Social Media</a></li>
                                     <li><a class="dropdown-item" href="graphicdesign.html">Graphic Design</a></li>
                                     <li><a class="dropdown-item" href="gamedevelopment.html">Game Development</a></li>
+                                    <li><a class="dropdown-item" href="agents.html">AI Agents</a></li>
                                     <li><a class="dropdown-item" href="drones.html">Drones</a></li>
                                     <li><a class="dropdown-item" href="architecture.html">Architecture</a></li>
                                     <li><a class="dropdown-item" href="vehicles.html">Vehicles</a></li>
@@ -180,6 +181,21 @@
                         <a href="gamedevelopment.html#game-development" class="btn btn-outline-danger mt-3">Explore</a>
                     </div>
                 </div>
+
+                <!-- MegaXGnome AI Agents -->
+                <div class="col-lg-3 col-md-6 mb-4">
+                    <div class="feature-box text-center h-100 p-4 border rounded shadow-sm bg-dark text-light">
+                        <i class="fas fa-brain-circuit fa-3x mb-3 text-warning glow-icon"></i>
+                        <h4 class="mb-2 text-warning">MegaXGnome AI Agents</h4>
+                        <p>
+                            The MegaXGnome Framework is the core infrastructure powering our AI agents — a modular, orchestrated system designed for speed, autonomy, and real-time adaptability across custom digital ecosystems.
+                        </p>
+                        <a href="agents.html#ai-agents" class="btn btn-outline-warning mt-3">
+                            Meet the Agents
+                        </a>
+                    </div>
+                </div>
+
 
                 <!-- Drones -->
                 <div class="col-lg-3 col-md-6 mb-4">
