--- a/webdevelopment.html
+++ b/webdevelopment.html
@@ -100,6 +100,7 @@
                                     <li><a class="dropdown-item" href="socialmedia.html">Social Media</a></li>
                                     <li><a class="dropdown-item" href="graphicdesign.html">Graphic Design</a></li>
                                     <li><a class="dropdown-item" href="gamedevelopment.html">Game Development</a></li>
+                                    <li><a class="dropdown-item" href="agents.html">AI Agents</a></li>
                                     <li><a class="dropdown-item" href="drones.html">Drones</a></li>
                                     <li><a class="dropdown-item" href="architecture.html">Architecture</a></li>
                                     <li><a class="dropdown-item" href="vehicles.html">Vehicles</a></li>
