--- a/agents.html
+++ b/agents.html
@@ -124,12 +124,12 @@
             <img src="images/MegaXGnome_Agents_Logo_2500x500px.png" alt="Slabbion Logo" class="logo mb-4 glow-icon" />
 
             <!-- Main Title -->
-            <h1 class="display-4 glow-yellow">
+            <h1 class="display-4 glow-gold">
                 Slabbion
             </h1>
 
             <!-- Second Title -->
-            <h1 class="display-4 glow-yellow">
+            <h1 class="display-4 glow-gold">
                 MegaXGnome AI Agents
             </h1>
 
@@ -144,7 +144,7 @@
             </p>
 
             <!-- Call to Action -->
-            <a href="contact.html#contact" class="btn btn-light mt-3 feature-box glow-yellow">
+            <a href="contact.html#contact" class="btn btn-light mt-3 feature-box glow-gold">
                 Unlock Custom Solutions
             </a>
 
@@ -158,48 +158,48 @@
 
     <!-- Slabbion AI Agents Showcase -->
     <section id="ai-agents" class="container py-5">
-        <h2 class="text-center mb-5 section-title glow-yellow">🧠 Slabbion AI Command Agents</h2>
+        <h2 class="text-center mb-5 section-title glow-gold">🧠 Slabbion AI Command Agents</h2>
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
 
-            <!-- ORION Agent Card -->
+            <!-- ZENITH Agent Card -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center feature-box p-3">
-                    <img src="images/Agent Orion.png" alt="Agent Orion" class="rounded-circle mx-auto mt-3 mb-2 shadow" style="width: 80px; height: 80px;" />
+                    <img src="images/Agent Zenith.png" alt="Agent Zenith" class="rounded-circle mx-auto mt-3 mb-2 shadow" style="width: 80px; height: 80px;" />
                     <div class="card-body">
-                        <h4 class="mb-2 text-warning">🛰 ORION</h4>
-                        <p class="mb-3">Primary AI logic unit. Executes commands, controls systems, and monitors live data pipelines.</p>
-                        <button type="button" class="btn btn-outline-warning" data-bs-toggle="modal" data-bs-target="#modalOrion">
+                        <h4 class="mb-2 text-warning">🔱 ZENITH</h4>
+                        <p class="mb-3">The master node. Synthesizes data across all agents into cosmic clarity.</p>
+                        <button type="button" class="btn btn-outline-warning" data-bs-toggle="modal" data-bs-target="#modalZenith">
                             View Agent
                         </button>
                     </div>
                 </div>
             </div>
 
-            <!-- ORION Agent Modal -->
-            <div class="modal fade" id="modalOrion" tabindex="-1" aria-labelledby="modalOrionLabel" aria-hidden="true">
+            <!-- ZENITH Agent Modal -->
+            <div class="modal fade" id="modalZenith" tabindex="-1" aria-labelledby="modalZenithLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered modal-lg">
                     <div class="modal-content bg-dark text-light rounded">
                         <div class="modal-body d-flex flex-column gap-4 justify-content-center">
-                            <!-- ORION Fancy Header -->
+                            <!-- ZENITH Header -->
                             <div class="d-flex align-items-center gap-4 sparkle">
-                            <img src="images/Agent Orion.png" alt="Agent Orion Portrait"
+                            <img src="images/Agent Zenith.png" alt="Agent Zenith Portrait"
                                 class="rounded-circle border border-yellow-400 shadow" style="width: 80px; height: 80px;" />
                             <div>
-                                <h1 class="text-3xl font-bold text-yellow-400 m-0">🛰️ Agent Orion</h1>
-                                <p class="text-yellow-200 fst-italic small m-0">Real-time ops, market scans, and tactical execution.</p>
+                                <h1 class="text-3xl font-bold text-yellow-400 m-0">🔱 Agent ZENITH</h1>
+                                <p class="text-yellow-200 fst-italic small m-0">Celestial synchronizer. Synthesizes multi-agent intelligence into unified flow.</p>
                             </div>
                             </div>
 
-                            <!-- ORION Agent Description -->
+                            <!-- ZENITH Description -->
                             <p class="text-center text-warning px-3">
-                            Mainframe logic handler, memory state tracker, and AI protocol hub. Orion coordinates all internal modules,
-                            ensuring optimal decisions are made in split seconds across your custom system.
+                            Zenith is the sovereign core — aggregating knowledge, strategies, and observations from Orion, Nova, Hex, Vanta, and Solis. 
+                            He is the bridge between subsystems, transforming scattered signals into luminous insight.
                             </p>
                         </div>
 
                         <div class="modal-footer border-0 flex-column">
                             <a href="https://slabbion.github.io/MegaXGnome/" class="btn btn-warning w-100 mb-2" target="_blank">
-                            🚀 Visit MegaXGnome Dashboard
+                            🌐 Visit MegaXGnome Dashboard
                             </a>
                             <button type="button" class="btn btn-outline-light w-100" data-bs-dismiss="modal">Close</button>
                         </div>
@@ -284,7 +284,7 @@
 
                             <!-- HEX Description -->
                             <p class="text-center text-warning px-3">
-                            Hex monitors real-time news streams, headlines, and metadata across the web. She analyzes tone, detects surges,
+                            Hex monitors real-time news streams, headlines, and metadata across the web. He analyzes tone, detects surges,
                             and identifies patterns before they go viral — arming your system with early warning intelligence.
                             </p>
                         </div>
@@ -393,46 +393,45 @@
                 </div>
             </div>
 
-
-            <!-- ZENITH Agent Card -->
+            <!-- ORION Agent Card -->
             <div class="col">
                 <div class="card h-100 shadow-lg border-0 rounded-4 text-center feature-box p-3">
-                    <img src="images/Agent Zenith.png" alt="Agent Zenith" class="rounded-circle mx-auto mt-3 mb-2 shadow" style="width: 80px; height: 80px;" />
+                    <img src="images/Agent Orion.png" alt="Agent Orion" class="rounded-circle mx-auto mt-3 mb-2 shadow" style="width: 80px; height: 80px;" />
                     <div class="card-body">
-                        <h4 class="mb-2 text-warning">🔱 ZENITH</h4>
-                        <p class="mb-3">The master node. Synthesizes data across all agents into cosmic clarity.</p>
-                        <button type="button" class="btn btn-outline-warning" data-bs-toggle="modal" data-bs-target="#modalZenith">
+                        <h4 class="mb-2 text-warning">🛰 ORION</h4>
+                        <p class="mb-3">Primary AI logic unit. Executes commands, controls systems, and monitors live data pipelines.</p>
+                        <button type="button" class="btn btn-outline-warning" data-bs-toggle="modal" data-bs-target="#modalOrion">
                             View Agent
                         </button>
                     </div>
                 </div>
             </div>
 
-            <!-- ZENITH Agent Modal -->
-            <div class="modal fade" id="modalZenith" tabindex="-1" aria-labelledby="modalZenithLabel" aria-hidden="true">
+            <!-- ORION Agent Modal -->
+            <div class="modal fade" id="modalOrion" tabindex="-1" aria-labelledby="modalOrionLabel" aria-hidden="true">
                 <div class="modal-dialog modal-dialog-centered modal-lg">
                     <div class="modal-content bg-dark text-light rounded">
                         <div class="modal-body d-flex flex-column gap-4 justify-content-center">
-                            <!-- ZENITH Header -->
+                            <!-- ORION Fancy Header -->
                             <div class="d-flex align-items-center gap-4 sparkle">
-                            <img src="images/Agent Zenith.png" alt="Agent Zenith Portrait"
+                            <img src="images/Agent Orion.png" alt="Agent Orion Portrait"
                                 class="rounded-circle border border-yellow-400 shadow" style="width: 80px; height: 80px;" />
                             <div>
-                                <h1 class="text-3xl font-bold text-yellow-400 m-0">🔱 Agent ZENITH</h1>
-                                <p class="text-yellow-200 fst-italic small m-0">Celestial synchronizer. Synthesizes multi-agent intelligence into unified flow.</p>
+                                <h1 class="text-3xl font-bold text-yellow-400 m-0">🛰️ Agent Orion</h1>
+                                <p class="text-yellow-200 fst-italic small m-0">Real-time ops, market scans, and tactical execution.</p>
                             </div>
                             </div>
 
-                            <!-- ZENITH Description -->
+                            <!-- ORION Agent Description -->
                             <p class="text-center text-warning px-3">
-                            Zenith is the sovereign core — aggregating knowledge, strategies, and observations from Orion, Nova, Hex, Vanta, and Solis. 
-                            She is the bridge between subsystems, transforming scattered signals into luminous insight.
+                            Mainframe logic handler, memory state tracker, and AI protocol hub. Orion coordinates all internal modules,
+                            ensuring optimal decisions are made in split seconds across your custom system.
                             </p>
                         </div>
 
                         <div class="modal-footer border-0 flex-column">
                             <a href="https://slabbion.github.io/MegaXGnome/" class="btn btn-warning w-100 mb-2" target="_blank">
-                            🌐 Visit MegaXGnome Dashboard
+                            🚀 Visit MegaXGnome Dashboard
                             </a>
                             <button type="button" class="btn btn-outline-light w-100" data-bs-dismiss="modal">Close</button>
                         </div>
@@ -448,7 +447,7 @@
     <!-- 🔧 Services / Stack Showcase -->
     <section class="container py-5">
         <div class="container">
-            <h2 class="mb-5 text-center section-title glow-yellow">🛠️ Powered by the Best Tools</h2>
+            <h2 class="mb-5 text-center section-title glow-gold">🛠️ Powered by the Best Tools</h2>
 
             <div class="row g-4 text-center">
 
@@ -719,7 +718,7 @@
     <!-- 🧬 MegaXGnome Framework Overview -->
     <section id="megaxgnome" class="py-5 bg-black text-light">
         <div class="container">
-            <h2 class="mb-5 text-center section-title glow-yellow">🧬 Inside the MegaXGnome Framework</h2>
+            <h2 class="mb-5 text-center section-title glow-gold">🧬 Inside the MegaXGnome Framework</h2>
             
             <div class="row g-4">
             <!-- Core Intelligence -->
@@ -794,20 +793,20 @@
             <div class="row align-items-center">
                 <!-- Developer Credit -->
                 <div class="col-md-6 mb-3 mb-md-0">
-                    <p class="mb-0">Crafted with excellence by <strong class="glow-yellow">Niël Slabbert</strong></p>
+                    <p class="mb-0">Crafted with excellence by <strong class="glow-gold">Niël Slabbert</strong></p>
                 </div>
 
                 <!-- Social Buttons -->
                 <div class="col-md-6">
                     <div class="social-icons d-flex justify-content-center gap-3">
-                        <a href="https://www.facebook.com/slabbion" target="_blank"><i class="fab fa-facebook-f glow-yellow"></i></a>
-                        <a href="https://x.com/slabbion" target="_blank"><i class="fab fa-x-twitter glow-yellow"></i></a>
-                        <a href="https://www.instagram.com/slabbion" target="_blank"><i class="fab fa-instagram glow-yellow"></i></a>
-                        <a href="https://www.tiktok.com/@slabbion" target="_blank"><i class="fab fa-tiktok glow-yellow"></i></a>
-                        <a href="https://www.youtube.com/@slabbion" target="_blank"><i class="fab fa-youtube glow-yellow"></i></a>
-                        <a href="https://www.linkedin.com/company/slabbion" target="_blank"><i class="fab fa-linkedin-in glow-yellow"></i></a>
+                        <a href="https://www.facebook.com/slabbion" target="_blank"><i class="fab fa-facebook-f glow-gold"></i></a>
+                        <a href="https://x.com/slabbion" target="_blank"><i class="fab fa-x-twitter glow-gold"></i></a>
+                        <a href="https://www.instagram.com/slabbion" target="_blank"><i class="fab fa-instagram glow-gold"></i></a>
+                        <a href="https://www.tiktok.com/@slabbion" target="_blank"><i class="fab fa-tiktok glow-gold"></i></a>
+                        <a href="https://www.youtube.com/@slabbion" target="_blank"><i class="fab fa-youtube glow-gold"></i></a>
+                        <a href="https://www.linkedin.com/company/slabbion" target="_blank"><i class="fab fa-linkedin-in glow-gold"></i></a>
                     </div>
-                    <p class="mt-3 mb-0">&copy; 2025 <span class="glow-yellow">Slabbion</span> — Web, Social & Design. All rights reserved.</p>
+                    <p class="mt-3 mb-0">&copy; 2025 <span class="glow-gold">Slabbion</span> — Web, Social & Design. All rights reserved.</p>
                 </div>
             </div>
         </div>
