--- a/agents.html
+++ b/agents.html
@@ -778,12 +778,10 @@
         </div>
     </section>
 
-
-
     <!-- Footer -->
     <footer class="py-4 text-center footer-glow">
         <div class="container">
-            <p>“Commit your work to the Lord, and your plans will be established.” — <em>Proverbs 16:3</em></p>
+            <p>“For the Lord gives wisdom; from His mouth come knowledge and understanding.” — <em>Proverbs 2:6</em></p>
         </div>
     </footer>
 
