--- a/index.html
+++ b/index.html
@@ -140,127 +140,126 @@
     <!-- Services Section -->
     <section id="services" class="py-5">
         <div class="container">
-
             <div class="row">
+
                 <!-- Web Development -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="feature-box text-center h-100 p-4 border rounded shadow-sm">
-                        <i class="fas fa-code fa-3x mb-3 text-primary"></i>
-                        <h4 class="mb-2">Web Development</h4>
-                        <p>Modern, responsive websites built for performance and scalability.</p>
-                        <a href="webdevelopment.html#web-development" class="btn btn-outline-primary mt-3">Explore</a>
+                    <i class="fas fa-laptop-code fa-3x mb-3 text-primary"></i>
+                    <h4 class="mb-2">Web Development</h4>
+                    <p>Modern, responsive websites built for performance and scalability.</p>
+                    <a href="webdevelopment.html#web-development" class="btn btn-outline-primary mt-3">Explore</a>
                     </div>
                 </div>
 
                 <!-- Social Media Management -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="feature-box text-center h-100 p-4 border rounded shadow-sm">
-                        <i class="fas fa-share-alt fa-3x mb-3 text-success"></i>
-                        <h4 class="mb-2">Social Media</h4>
-                        <p>Grow your digital presence through data-driven content strategies.</p>
-                        <a href="socialmedia.html#social-media-management" class="btn btn-outline-success mt-3">Explore</a>
+                    <i class="fas fa-bullhorn fa-3x mb-3 text-success"></i>
+                    <h4 class="mb-2">Social Media</h4>
+                    <p>Grow your digital presence through data-driven content strategies.</p>
+                    <a href="socialmedia.html#social-media-management" class="btn btn-outline-success mt-3">Explore</a>
                     </div>
                 </div>
 
                 <!-- Graphic Design -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="feature-box text-center h-100 p-4 border rounded shadow-sm">
-                        <i class="fas fa-paint-brush fa-3x mb-3 text-info"></i>
-                        <h4 class="mb-2">Graphic Design</h4>
-                        <p>Brand-focused designs that communicate your identity with impact.</p>
-                        <a href="graphicdesign.html#graphic-design" class="btn btn-outline-info mt-3">Explore</a>
+                    <i class="fas fa-pen-nib fa-3x mb-3 text-info"></i>
+                    <h4 class="mb-2">Graphic Design</h4>
+                    <p>Brand-focused designs that communicate your identity with impact.</p>
+                    <a href="graphicdesign.html#graphic-design" class="btn btn-outline-info mt-3">Explore</a>
                     </div>
                 </div>
 
                 <!-- Game Development -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="feature-box text-center h-100 p-4 border rounded shadow-sm">
-                        <i class="fas fa-gamepad fa-3x mb-3 text-danger"></i>
-                        <h4 class="mb-2">Game Development</h4>
-                        <p>Slabbion brings creativity and technical precision to the gaming world.</p>
-                        <a href="gamedevelopment.html#game-development" class="btn btn-outline-danger mt-3">Explore</a>
+                    <i class="fas fa-vr-cardboard fa-3x mb-3 text-danger"></i>
+                    <h4 class="mb-2">Game Development</h4>
+                    <p>Slabbion brings creativity and technical precision to the gaming world.</p>
+                    <a href="gamedevelopment.html#game-development" class="btn btn-outline-danger mt-3">Explore</a>
                     </div>
                 </div>
 
                 <!-- MegaXGnome AI Agents -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="feature-box text-center h-100 p-4 border rounded shadow-sm bg-dark text-light">
-                        <i class="fas fa-brain-circuit fa-3x mb-3 text-warning glow-icon"></i>
-                        <h4 class="mb-2 text-warning">MegaXGnome AI Agents</h4>
-                        <p>
-                            The MegaXGnome Framework is the core infrastructure powering our AI agents — a modular, orchestrated system designed for speed, autonomy, and real-time adaptability across custom digital ecosystems.
-                        </p>
-                        <a href="agents.html#ai-agents" class="btn btn-outline-warning mt-3">
-                            Meet the Agents
-                        </a>
+                    <i class="fas fa-robot fa-3x mb-3 text-warning glow-icon"></i>
+                    <h4 class="mb-2 text-warning">MegaXGnome AI Agents</h4>
+                    <p>
+                        The MegaXGnome Framework is the core infrastructure powering our AI agents — a modular, orchestrated system designed for speed, autonomy, and real-time adaptability across custom digital ecosystems.
+                    </p>
+                    <a href="agents.html#ai-agents" class="btn btn-outline-warning mt-3">
+                        Meet the Agents
+                    </a>
                     </div>
                 </div>
-
 
                 <!-- Drones -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="feature-box text-center h-100 p-4 border rounded shadow-sm">
-                        <i class="fas fa-robot fa-3x mb-3" style="color: #6f42c1;"></i>
-                        <h4 class="mb-2">Drones</h4>
-                        <p>Explore Slabbion's titanium drone (SL Series) army: SL-01 to SL-07—each built for purpose, precision, and power.</p>
-                        <a href="drones.html#sl-series" class="btn btn-outline-violet mt-3">View Models</a>
+                    <i class="fas fa-helicopter fa-3x mb-3" style="color: #6f42c1;"></i>
+                    <h4 class="mb-2">Drones</h4>
+                    <p>Explore Slabbion's titanium drone (SL Series) army: SL-01 to SL-07—each built for purpose, precision, and power.</p>
+                    <a href="drones.html#sl-series" class="btn btn-outline-violet mt-3">View Models</a>
                     </div>
                 </div>
 
                 <!-- Architecture -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="feature-box text-center h-100 p-4 border rounded shadow-sm">
-                        <i class="fas fa-home fa-3x mb-3" style="color: #228B22;"></i>
-                        <h4 class="mb-2">Architecture</h4>
-                        <p>Energy Efficient Homes. Designing future-forward smart homes with solar integration, automation, and sustainable living at the core.</p>
-                        <a href="architecture.html#architecture" class="btn btn-outline-forest mt-3">Discover</a>
+                    <i class="fas fa-drafting-compass fa-3x mb-3" style="color: #228B22;"></i>
+                    <h4 class="mb-2">Architecture</h4>
+                    <p>Energy Efficient Homes. Designing future-forward smart homes with solar integration, automation, and sustainable living at the core.</p>
+                    <a href="architecture.html#architecture" class="btn btn-outline-forest mt-3">Discover</a>
                     </div>
                 </div>
 
                 <!-- Vehicles -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="feature-box text-center h-100 p-4 border rounded shadow-sm">
-                        <i class="fas fa-car-side fa-3x mb-3" style="color: #e67e22;"></i>
-                        <h4 class="mb-2">Vehicles</h4>
-                        <p>Cars, Dune Buggies & Bikes. High-performance custom builds engineered for speed, control, and off-road adventure—Slabbion machines deliver on every terrain.</p>
-                        <a href="vehicles.html#vehicles" class="btn btn-outline-orange mt-3">View Builds</a>
+                    <i class="fas fa-car fa-3x mb-3" style="color: #e67e22;"></i>
+                    <h4 class="mb-2">Vehicles</h4>
+                    <p>Cars, Dune Buggies & Bikes. High-performance custom builds engineered for speed, control, and off-road adventure—Slabbion machines deliver on every terrain.</p>
+                    <a href="vehicles.html#vehicles" class="btn btn-outline-orange mt-3">View Builds</a>
                     </div>
                 </div>
 
                 <!-- Body Armor -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="feature-box text-center h-100 p-4 border rounded shadow-sm">
-                        <i class="fas fa-shield-alt fa-3x mb-3" style="color: #b30000;"></i>
-                        <h4 class="mb-2">Body Armor</h4>
-                        <p>Slabbion’s body armor blends tactical strength with future-ready materials—designed for resilience, mobility, and innovation in the field.</p>
-                        <a href="armor.html#body-armor" class="btn btn-outline-deepred mt-3">Explore Gear</a>
+                    <i class="fas fa-user-shield fa-3x mb-3" style="color: #b30000;"></i>
+                    <h4 class="mb-2">Body Armor</h4>
+                    <p>Slabbion’s body armor blends tactical strength with future-ready materials—designed for resilience, mobility, and innovation in the field.</p>
+                    <a href="armor.html#body-armor" class="btn btn-outline-deepred mt-3">Explore Gear</a>
                     </div>
                 </div>
-
 
                 <!-- Custom Solutions -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="feature-box text-center h-100 p-4 border rounded shadow-sm">
-                        <i class="fas fa-brain fa-3x mb-3 text-warning"></i>
-                        <h4 class="mb-2">Custom AI & Agents</h4>
-                        <p>Beyond software—Slabbion crafts intelligent agents and tailored digital minds to serve unique missions.</p>
-                        <a href="customsolutions.html#ai-agents" class="btn btn-outline-warning mt-3">Explore</a>
+                    <i class="fas fa-cogs fa-3x mb-3 text-warning"></i>
+                    <h4 class="mb-2">Custom AI & Agents</h4>
+                    <p>Beyond software—Slabbion crafts intelligent agents and tailored digital minds to serve unique missions.</p>
+                    <a href="customsolutions.html#ai-agents" class="btn btn-outline-warning mt-3">Explore</a>
                     </div>
                 </div>
-
 
                 <!-- Join Our Team -->
                 <div class="col-lg-3 col-md-6 mb-4">
                     <div class="feature-box text-center h-100 p-4 border rounded shadow-sm">
-                        <i class="fas fa-users fa-3x mb-3 text-secondary"></i>
-                        <h4 class="mb-2">Partner With Slabbion</h4>
-                        <p>We're always on the lookout for talented collaborators and creatives. Let’s build something amazing together.</p>
-                        <a href="contact.html#contact" class="btn btn-outline-secondary mt-3">Apply Now</a>
+                    <i class="fas fa-user-friends fa-3x mb-3 text-secondary"></i>
+                    <h4 class="mb-2">Partner With Slabbion</h4>
+                    <p>We're always on the lookout for talented collaborators and creatives. Let’s build something amazing together.</p>
+                    <a href="contact.html#contact" class="btn btn-outline-secondary mt-3">Apply Now</a>
                     </div>
                 </div>
+
             </div>
         </div>
     </section>
+
 
     <!-- IMAGE SCROLLER -->
     <section id="image-scroller">
