--- a/agents.html
+++ b/agents.html
@@ -145,7 +145,7 @@
 
             <!-- Call to Action -->
             <a href="contact.html#contact" class="btn btn-light mt-3 feature-box glow-gold">
-                Unlock Custom Solutions
+                Establish Neural Command
             </a>
 
             <!-- Stars / Rating -->
